(GH-45) Rename ref links and config

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,12 +1,12 @@
 +++
-title = "DevX"
-linkTitle = "DevX"
+title = "Content and Tooling"
+linkTitle = "Content and Tooling"
 
 +++
 
 <section class="td-cover-block td-cover-block--height-max js-td-cover -bg-dark" style="text-align: center; margin-left: -15px; margin-right: -15px;">
 	<div class="mx-auto">
-		<div class="display-1 m-5">DevX Tools & Modules</div>
+		<div class="display-1 m-5">Content & Tooling</div>
 		<a class="btn btn-lg btn-primary mr-3 mb-4" href="#tools">
 			View Tools <i class="fas fa-arrow-circle-down ml-2"></i>
 		</a>
@@ -14,7 +14,7 @@ linkTitle = "DevX"
 			About <i class="fas fa-bookmark ml-2"></i>
 		</a>
 	</div>
-	<p class="lead mt-5 pl-5 pr-5">Welcome to the DevX tools and modules site! Here you can find all documentation relevant to the usage and development of PCT and PRM.</p> 
+	<p class="lead mt-5 pl-5 pr-5">Welcome to the Content and Tooling site!</p> 
 </section>
 
 <div id="tools"></div>
@@ -31,7 +31,7 @@ linkTitle = "DevX"
 
 {{< blocks/section color="dark">}}
 {{% blocks/feature icon="fas fa-book-reader" title="All new documentation site!" %}}
-This site is the central location for Puppet DevX Tooling documentation.
+This site is the central location for Content and Tooling documentation.
 {{% /blocks/feature %}}
 
 
@@ -41,6 +41,6 @@ Find out how Puppet Content Templates (PCT) and the Puppet Runtime Manager (PRM)
 
 
 {{% blocks/feature icon="fab fa-github" title="Contributions welcome!" %}}
-We do a [Pull Request](https://github.com/puppetlabs/devx/pulls) contributions workflow on **GitHub**. New users are always welcome!
+We do a [Pull Request](https://github.com/puppetlabs/content-and-tooling-teampulls) contributions workflow on **GitHub**. New users are always welcome!
 {{% /blocks/feature %}}
 {{< /blocks/section>}}
