(GH-45) Add new Docs section

--- a/content/_index.html
+++ b/content/_index.html
@@ -41,6 +41,6 @@ Find out how Puppet Content Templates (PCT) and the Puppet Runtime Manager (PRM)
 
 
 {{% blocks/feature icon="fab fa-github" title="Contributions welcome!" %}}
-We do a [Pull Request](https://github.com/puppetlabs/content-and-tooling-teampulls) contributions workflow on **GitHub**. New users are always welcome!
+We do a Pull Request contributions workflow on [GitHub](https://github.com/puppetlabs). New users are always welcome!
 {{% /blocks/feature %}}
 {{< /blocks/section>}}
