(GH-45) Switch out section to arrow-down

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,20 +1,12 @@
 +++
 title = "Content and Tooling"
 linkTitle = "Content and Tooling"
-
 +++
 
-<section class="td-cover-block td-cover-block--height-max js-td-cover -bg-dark" style="text-align: center; margin-left: -15px; margin-right: -15px;">
-	<div class="mx-auto">
-		<div class="display-1 m-5">Content & Tooling</div>
-		<a class="btn btn-lg btn-primary mr-3 mb-4" href="#tools">
-			View Tools <i class="fas fa-arrow-circle-down ml-2"></i>
-		</a>
-		<a class="btn btn-lg btn-secondary mr-3 mb-4" href="blog/posts/future-of-pdk/">
-			About <i class="fas fa-bookmark ml-2"></i>
-		</a>
+<section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
+	<div class="container text-center td-arrow-down">
+		<div class="display-1 m-5">Welcome!</div>
 	</div>
-	<p class="lead mt-5 pl-5 pr-5">Welcome to the Content and Tooling site!</p> 
 </section>
 
 <div id="tools"></div>
