(GH-45) Ensure headers are consistent
This commit ensures that the main index.html header is using the same
span & class as other pages.

--- a/content/_index.html
+++ b/content/_index.html
@@ -5,7 +5,9 @@ linkTitle = "Content and Tooling"
 
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 	<div class="container text-center td-arrow-down">
-		<div class="display-1 m-5">Welcome!</div>
+		<span class="h4 mb-0">
+			<h1>Welcome!</h1>
+		</span>	</div>
 	</div>
 </section>
 
