(GH-45) Remove additional div

--- a/content/_index.html
+++ b/content/_index.html
@@ -7,7 +7,7 @@ linkTitle = "Content and Tooling"
 	<div class="container text-center td-arrow-down">
 		<span class="h4 mb-0">
 			<h1>Welcome!</h1>
-		</span>	</div>
+		</span>
 	</div>
 </section>
 
