(MAINT) Rename pdkgo references to pct

--- a/content/_index.html
+++ b/content/_index.html
@@ -12,10 +12,10 @@ linkTitle = "Content and Tooling"
 </section>
 
 <div class="card-deck p-0 center mt-5 mb-5 container-md mx-auto">
-	{{< project-card title="PCT" icon="fa-align-left" installUrl="pct/install" docsUrl="pct" >}} 
+	{{< project-card title="PCT" icon="fa-align-left" installUrl="docs/pct/install" docsUrl="docs/pct" >}} 
 	Puppet Content Templates (PCT) codify a structure to produce content for any Puppet Product that can be authored by Puppet Product Teams or external users without direct help of the PDK team. 
 	{{< /project-card>}}
-	{{< project-card title="PRM" icon="fa-boxes" installUrl="prm/install" docsUrl="prm" >}} 
+	{{< project-card title="PRM" icon="fa-boxes" installUrl="docs/prm/install" docsUrl="docs/prm" >}} 
 	Puppet runtime manager (PRM) is a program that allows for the management of Puppet versions, along with their respective Ruby versions.
 	This is achieved through the use of custom backends (e.g. local or docker) resulting in faster, more efficient functionality when compared to the PDK.
 	{{< /project-card>}}
